syntax = "proto3";
package test;
option go_package = "github.com/spiffe/spire/pkg/common/catalog/test";

import "spire/common/plugin/plugin.proto";

message Request {
    string in = 1;
}

message Response {
    string out = 1;
}

// TestPlugin is a toy plugin interface for testing
service TestPlugin {
    rpc CallPlugin(Request) returns (Response);
    rpc Configure(spire.common.plugin.ConfigureRequest) returns (spire.common.plugin.ConfigureResponse);
}

// BarService is a toy plugin interface for testing
service TestService {
    rpc CallService(Request) returns (Response);
}

// BazHostService is a toy host service interface for testing
service TestHostService {
    rpc CallHostService(Request) returns (Response);
}
